--- a/style.css
+++ b/style.css
@@ -3,3 +3,42 @@
     width:10px;
     height: 10px;
 }
+.header{
+    background: black;
+}
+.nav-bar
+{
+    display:flex;
+    padding: 40px 120px;
+}
+.nav-logo img{
+    width:130px;
+}
+.nav-links{
+    flex:1;
+}
+.nav-links ul{
+    margin-left:50px;
+    display:inline;
+}
+.nav-links ul li{
+    list-style:none;
+    display:inline-block;
+    padding:8px 25px;
+}
+.nav-links ul a{
+    color: #fff;
+    text-decoration: none;
+    font-size:13px;
+}
+.nav-links ul a:hover{
+    color:yellow;
+}
+.nav-links ul li::after{
+    content: '';
+    width:100%;
+    height: 2px;
+    background:yellow;
+    display: block;
+    margin:auto;
+}
