--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ img {vertical-align: middle;}
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
+}
 .header{
     background: black;
 }
