--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
+}
 body{
     background:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8))
 }
@@ -46,3 +51,26 @@ body{
     display: block;
     margin:auto;
 }
+
+
+
+.grid{
+    display:block;
+    padding:16px;
+    display:grid;
+    grid-gap:16px;
+    grid-template-columns: repeat(2,1fr);
+    
+}
+.grid .col{
+    background: pink;
+    margin-bottom:16px;
+    padding:16px;
+}
+    
+    
+
+
+
+
+
