--- a/style.css
+++ b/style.css
@@ -60,12 +60,17 @@ body{
     display:grid;
     grid-gap:16px;
     grid-template-columns: repeat(2,1fr);
+    color:blanchedalmond;
+    align-content: center;
     
 }
 .grid .col{
-    background: pink;
+    background: rgb(10, 10, 10);
     margin-bottom:16px;
     padding:16px;
+}
+.grid .col img{
+    width: 100%;
 }
     
     
