--- a/style.css
+++ b/style.css
@@ -71,10 +71,11 @@ body{
         width: 200px;
         background: #000;
         top:0;
-        right:0;
+        right:-200px;
         position: absolute;
         text-align: left;
         z-index: 2;
+        transition:0.5s;
     }
 
     .nav-links ul a{
