--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding:0;
     box-sizing: border-box;
     font-family: 'Courier New', Courier, monospace;
+    color:blanchedalmond;
 }
 body{
     background:black;
@@ -86,6 +87,7 @@ body{
         display: block;
 
     }
+}
 /* Banner */
  .banner{
   font-size: 30px;
@@ -169,3 +171,4 @@ section .bann{
     padding: 100px 40px;
   }
 }
+
