--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     color:blanchedalmond;
 }
 body{
-    background:black;
+    background-color :#000000;
+    background-image: linear-gradient(315deg, #7e7c7c 0%, #252525 74%);
 }
 #title
 {
