--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body{
 }
 .nav-links{
     flex:1;
+    
 }
 .nav-links ul{
     margin-left:50px;
@@ -54,41 +55,23 @@ body{
 }
 .nav-links ul li:hover::after{
     width: 100%;
-} 
-/*end navbar*/
-.nav-bar .fa{
+}
+.nav-links ul a.icon{
     display: none;
 }
+
+/*end navbar*/
+
 /*responsiveness*/
 /*mobile veiw*/
-@media(max-width: 700px){
-    .nav-bar{
-        padding: 10px 30px;
+@media screen and (max-width: 600px) {
+    /*.topnav a:not(:first-child) {display: none;}*/
+    .nav-links ul a.icon {
+      float: right;
+      display: block;
     }
-    .nav-bar .fa{
-        display: block;
-        color: #fff;
-        margin: 10px 25px;
-        font-size:22px;
-        cursor:pointer;
-    }
-    nav-links{
-        height:100vh;
-        width: 200px;
-        background: #000;
-        top:0;
-        right:-200px;
-        position: absolute;
-        text-align: left;
-        z-index: 2;
-        transition:0.5s;
-    }
+  }
 
-    .nav-links ul a{
-        display: block;
-
-    }
-}
 /* Banner */
  .banner{
   font-size: 30px;
