--- a/style.css
+++ b/style.css
@@ -65,11 +65,25 @@ body{
 
 /*responsiveness*/
 /*mobile veiw*/
-@media screen and (max-width: 600px) {
-    /*.topnav a:not(:first-child) {display: none;}*/
+@media screen and (max-width: 1000px) {
+    .nav-link a:not(:first-child) {display: none;}
     .nav-links ul a.icon {
       float: right;
       display: block;
+    }
+  }
+
+  @media screen and (max-width: 1000px) {
+    .nav-links.responsive {position: relative;}
+    .nav-links.responsive ul a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .nav-links.responsive ul a {
+      float: none;
+      display: block;
+      text-align: left;
     }
   }
 
