--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     color:blanchedalmond;
 }
 body{
-    background-color :#000000;
-    background-image: linear-gradient(315deg, #7e7c7c 0%, #252525 74%);
+    background-color: #000000;
+    background-image: linear-gradient(147deg, #000000 0%, #262a2c 74%);
 }
 #title
 {
@@ -156,10 +156,21 @@ section .bann{
     
 }
 .grid .col{
-    background: rgb(10, 10, 10);
+    background-color: #000000;
+    
     margin-bottom:16px;
     padding:16px;
 }
+.grid .col:nth-child(odd) {
+    background-color: #ffeaa7;
+background-image: linear-gradient(315deg, #ffeaa7 0%, #000000 74%);
+
+
+  }
+  
+ .grid .col:nth-child(even) {
+    background: transparent;
+  }
 .grid .col img{
     width: 100%;
 }
