--- a/style.css
+++ b/style.css
@@ -66,7 +66,10 @@ body{
 /*responsiveness*/
 /*mobile veiw*/
 @media screen and (max-width: 1000px) {
-    .nav-link a:not(:first-child) {display: none;}
+    /*.nav-link a:not(:first-child) {display: none;}*/
+    .nav-links ul a{
+        display:none;
+    }
     .nav-links ul a.icon {
       float: right;
       display: block;
@@ -77,8 +80,8 @@ body{
     .nav-links.responsive {position: relative;}
     .nav-links.responsive ul a.icon {
       position: absolute;
-      right: 0;
       top: 0;
+      right: 0;
     }
     .nav-links.responsive ul a {
       float: none;
