--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
     width:100vw;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     background-color: #000000;
     background-image: linear-gradient(147deg, #000000 0%, #262a2c 74%);
 
@@ -18,14 +18,16 @@ body{
     height: 30px;
 }
 .header{
+    margin-top:20px;
     /*background:black;*/
+    text-align: center;
 }
 /*nav bar*/
 .nav-bar
 {
     letter-spacing: 3px;
     display:flex;
-    padding: 40px 120px;
+    padding: 40px 0;
 }
 .nav-logo img{
     width:150px; 
@@ -69,38 +71,21 @@ body{
 
 /*responsiveness*/
 /*mobile veiw*/
-@media screen and (max-width: 1000px) {
-    /*.nav-link a:not(:first-child) {display: none;}*/
-    .nav-links ul a{
-        display:none;
-    }
-    .nav-links ul a.icon {
-      float: right;
-      display: block;
-    }
-    .nav-bar .fa{
-        display: block;
-        color: #fff;
-        margin: 10px 25px;
-        font-size:22px;
-        cursor:pointer;
-    }
-    nav-links{
-        height:100vh;
-        width: 200px;
-        top:0;
-        right:0;
-        position: absolute;
-        text-align: left;
-        z-index: 2;
-    }
-
-    .nav-links ul a{
-        display: block;
-  }
+@media screen and (max-width: 800px) {
+   .nav-links ul {
+    padding:8px 5px;
+    /* font-size: 10px; */
+   }
+   .nav-logo img{
+    width:100px; 
+    margin:0;  
+}
+}
+.push{
+    margin-left:auto;
 }
 
-  @media screen and (max-width: 1000px) {
+  /* @media screen and (max-width: 1000px) {
     .nav-links.responsive {position: relative;}
     .nav-links.responsive ul a.icon {
       position: absolute;
@@ -112,7 +97,7 @@ body{
       display: block;
       text-align: left;
     }
-  }
+  } */
 
 /* Banner */
  .banner{
