--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
     width:100vw;
-    /* overflow-x: hidden; */
+    overflow-x: hidden; 
     background-color: #000000;
     background-image: linear-gradient(147deg, #000000 0%, #262a2c 74%);
 
@@ -175,8 +175,15 @@ section .bann{
   transform: scale(0.98);
 }
 
-
-
+@media (max-width: 1068px) {
+    .banner-img {
+      display: none;
+    }
+     #banner-section {
+      padding: 100px 40px;
+    }
+  }
+/*grid */
 .grid{
     font-family: 'Baloo Tammudu 2', cursive;
     letter-spacing: 3px;
@@ -207,24 +214,36 @@ section .bann{
     background: transparent;
   }
 .grid .col img{
-    width: 100%;
+    width:100%;
     height:50vh;
 }
     
-@media (max-width: 1068px) {
-  .banner-img {
-    display: none;
-  }
-   #banner-section {
-    padding: 100px 40px;
-  }
+@media (max-width:1100px) {
+    
+    .grid{
+        /*font-size: 13px;*/
+        display:inline;
+        width:10px;
+    }
+    .grid .col img{
+        width: 100%;
+        height:50vh;
+    }
+}
+@media (max-width: 750px) {
+    body{
+        overflow-x:hidden;
+    }
+    .grid{
+        font-size: 15px;
+    }
 }
 
 /* Footer */
 footer{
     background: #111;
     height: auto;
-    width: 100vw;
+    width: 100%;
     padding-top: 40px;  
 }
 .footerdiv{
@@ -289,7 +308,12 @@ text-align: center;
     font-size: 20px;
 }
 @media (max-width: 750px) {
+
     .fpara{
-        font-size: 10px;
+        font-size: 18px;
+    }
+    .footer{
+        margin right:0;
     }
 }
+
