--- a/style.css
+++ b/style.css
@@ -243,6 +243,10 @@ section .bann {
     width:100%;
     height:50vh;
 }
+.grid .col .top{
+    font-size: 20px;
+    font-weight: bold;
+}
     
 @media (max-width:1100px) {
     
